3-way automerge proof of concept using automerge works, flesh it out, and centralize code

--- a/combs_sync.cfg
+++ b/combs_sync.cfg
@@ -1,5 +1,5 @@
 this_repo_gitdir: /Users/wcombs/code/this_repo/.git
 this_repo_worktree: /Users/wcombs/code/this_repo/
 lock_path: /tmp/lockfile
-remote_server: combspro
+remote_server: localhost
 ssh_user: wcombs
