working on locking retries

--- a/repo2.cfg
+++ b/repo2.cfg
@@ -1,6 +1,8 @@
 this_repo_gitdir: /Users/wcombs/code/repo2/.git
 this_repo_worktree: /Users/wcombs/code/repo2/
 lock_path: /tmp/lockfile
+lock_retries: 5
+lock_wait_time: 5
 remote_server: localhost
 ssh_user: wcombs
 merge_script: /Users/wcombs/code/combs_sync/merge.sh
