fixing locking to be more reliable with ssh

--- a/repo2.cfg
+++ b/repo2.cfg
@@ -6,3 +6,4 @@ lock_wait_time: 5
 remote_server: localhost
 ssh_user: wcombs
 merge_script: /Users/wcombs/code/combs_sync/merge.sh
+unique_id: combsrepo2
