--- a/repo1.cfg
+++ b/repo1.cfg
@@ -1,5 +1,5 @@
 this_repo_gitdir: /Users/wcombs/code/repo1/.git
-this_repo_worktree: /Users/wcombs/code/repo1/
+this_repo_worktree: /Users/wcombs/code/repo1
 lock_path: /tmp/lockfile
 lock_retries: 5
 lock_wait_time: 5
@@ -7,3 +7,5 @@ remote_server: localhost
 ssh_user: wcombs
 merge_script: /Users/wcombs/code/combs_sync/merge.sh
 unique_id: combsrepo1
+big_files_dir: /Users/wcombs/code/repo1_bigfiles
+big_files_thresh: 1M
