--- a/repo2.cfg
+++ b/repo2.cfg
@@ -8,4 +8,4 @@ ssh_user: wcombs
 merge_script: /Users/wcombs/code/combs_sync/merge.sh
 unique_id: combsrepo2
 big_files_dir: /Users/wcombs/code/repo2_bigfiles
-big_files_thresh: 1M
+big_files_thresh: 1000000
