added readme, and some other stuff

--- a/repo1.cfg
+++ b/repo1.cfg
@@ -9,3 +9,4 @@ merge_script: /Users/wcombs/code/combs_sync/merge.sh
 unique_id: combsrepo1
 big_files_dir: /Users/wcombs/code/repo1_bigfiles
 big_files_thresh: 1000000
+dock_notify: on
