--- a/repo2.cfg
+++ b/repo2.cfg
@@ -9,3 +9,4 @@ merge_script: /Users/wcombs/code/combs_sync/merge.sh
 unique_id: combsrepo2
 big_files_dir: /Users/wcombs/code/repo2_bigfiles
 big_files_thresh: 1000000
+dock_notify: on
